ajustes finales primera prueba

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <h1>ENFOCATE EN TUS PACIENTES.</h1><!--tagline-->
                 <h2>NOSOTROS NOS ENCARGAMOS DEL RESTO.</h2>
                 <!--descripcion de la web-->
-                <p>Sistema de reserva de citas médicas. </p>
+                <p class="sistema">Sistema de reserva de citas médicas. </p>
 
                 <!--------lista desordenada con ítems para bullets--------->
                 <ul class="bullets">
@@ -116,10 +116,8 @@
             <li class="icons"><!--esto en un futuro lleva botones y ventanas modales para explicar los 3 pasos-->
                 <figure>
                     <img class="#" src="/assets/img/imagenes index prestadores salud/imagenes-01.png">
-                    <h4>ANALIZÁ LAS NECESIDADES DE TU PRÁCTICA MÉDICA</h4>
-                    <p class="necesidades">Lorem ipsum dolor sit amet consectetur adipisicing elit. In aliquid maxime ea
-                        aliquam corporis mollitia tempore tempora doloremque! Alias tenetur corporis, officiis quia sit
-                        similique aut doloremque atque expedita quos!</p>
+                    <h4>ANALIZÁ TU PRÁCTICA MÉDICA</h4>
+                    <p class="necesidades">Entender y abordar las necesidades de tu práctica médica es clave para ofrecer atención de calidad. Mantenete actualizado en investigación médica y personaliza la atención para cada paciente. Este enfoque integral garantiza una práctica médica eficiente y centrada en las necesidades tanto del personal como de los pacientes.</p>
                 </figure>
             </li>
             <li class="icons">
@@ -127,9 +125,7 @@
                     <img class="#" src="/assets/img/imagenes index prestadores salud/imagenes-02.png">
                 </figure>
                 <h4>IMPLEMENTÁ NUESTROS SERVICIOS</h4>
-                <p class="necesidades">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae
-                    vero doloremque voluptates ipsam nihil corporis repellendus ab, architecto officiis perferendis ea
-                    in sit eum fugit animi fuga neque maxime.</p>
+                <p class="necesidades">Optimiza tu experiencia médica con nuestra app de citas y registros. Implementa nuestros servicios para agendar citas fácilmente y gestionar tu historial médico de forma accesible. Simplifica tu atención médica, recibe recordatorios y mantén un seguimiento personalizado. </p>
             </li>
 
 
@@ -139,9 +135,7 @@
                     <img class="#" src="/assets/img/imagenes index prestadores salud/imagenes-03.png">
                 </figure>
                 <h4>CONTACTANOS Y OPTIMIZÁ TU RENDIMIENTO</h4>
-                <p class="necesidades">Lorem ipsum dolor sit amet consectetur adipisicing elit. At voluptatem, numquam
-                    suscipit officiis temporibus voluptas quis explicabo exercitationem. Repudiandae impedit officia
-                    adipisci animi quis omnis esse voluptatum eaque possimus quaerat!</p>
+                <p class="necesidades">¡Optimiza tu rendimiento hoy mismo! Contáctanos para descubrir cómo podemos ayudarte a alcanzar tus metas. Estamos aquí para brindarte soluciones efectivas y personalizadas. ¡No esperes más, contáctanos ahora y potencia tu rendimiento al máximo!</p>
             </li>
         </ul>
     </section>
@@ -151,9 +145,7 @@
             <div class="row">
                 <div class="card">
                     <blockquote>
-                        "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo commodi sed beatae cum tenetur
-                        quidem, minus ad ducimus voluptas, nobis tempora aspernatur delectus similique error odio labore
-                        repellendus voluptates accusantium!""
+                        "Esta aplicación ha transformado por completo mi experiencia con la atención médica. La capacidad de reservar citas de manera fácil y rápida es impresionante. Además, tener acceso instantáneo a mi historial médico me brinda tranquilidad. ¡Altamente recomendada para simplificar el proceso de atención médica!"
                     </blockquote>
                     <div class="container">
                         <div class="row medico">
@@ -173,9 +165,7 @@
                 </div>
                 <div class="card">
                     <blockquote>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo commodi sed beatae cum tenetur
-                        quidem, minus ad ducimus voluptas, nobis tempora aspernatur delectus similique error odio labore
-                        repellendus voluptates accusantium!
+                        "Nunca antes había sido tan sencillo organizar mis citas médicas. La aplicación es intuitiva y fácil de usar. Los recordatorios automáticos me han ayudado a no olvidar ninguna cita importante. ¡Definitivamente una herramienta esencial para quienes buscan optimizar su tiempo y cuidado de la salud!"
                     </blockquote>
                     <div class="container">
                         <div class="row medico">
@@ -195,9 +185,7 @@
                 </div>
                 <div class="card">
                     <blockquote>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo commodi sed beatae cum tenetur
-                        quidem, minus ad ducimus voluptas, nobis tempora aspernatur delectus similique error odio labore
-                        repellendus voluptates accusantium!
+                        "Esta aplicación ha reunido todo lo que necesito en un solo lugar. Desde reservar citas hasta llevar un seguimiento de mi historial médico, todo está al alcance de mi mano. La interfaz es limpia y moderna, lo que hace que la experiencia sea aún mejor. Una aplicación indispensable para quienes buscan simplificar su relación con la atención médica."
                     </blockquote>                    
                     <div class="container">
                         <div class="row medico">
@@ -222,22 +210,24 @@
         <!--texto enfocate en tus pacientes-->
         <h5 class="pacientes">Enfocate en tus pacientes</h5>
 
-        <div class="registro"> <a class="boton2" href="/registro.html">Registrate</a></div>
+        <div class="registro"> <a class="boton2" href="/registro.html">Contactanos</a></div>
     </section>
 
     <!--inicio faq-->
     <section class="faq">
         <div class="titulo-faq">Preguntas Frecuentes</div>
         <ul>
-            <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit? <i class="fas fa-solid fa-plus"></i></li>
-            <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit? <i class="fas fa-solid fa-plus"></i></li>
-            <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit? <i class="fas fa-solid fa-plus"></i></li>
-            <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit? <i class="fas fa-solid fa-plus"></i></li>
-            <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit? <i class="fas fa-solid fa-plus"></i></li>
-            <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit? <i class="fas fa-solid fa-plus"></i></li>
-            <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit? <i class="fas fa-solid fa-plus"></i></li>
-            <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit? <i class="fas fa-solid fa-plus"></i></li>
-            <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit? <i class="fas fa-solid fa-plus"></i></li>
+            <li>¿Cómo puedo reservar una cita con un médico en la aplicación? <i class="fas fa-solid fa-plus"></i></li>
+            <li>¿Puedo cancelar o modificar una cita existente a través de la aplicación? <i class="fas fa-solid fa-plus"></i></li>
+            <li>¿Cómo se manejan los recordatorios de citas en la aplicación?<i class="fas fa-solid fa-plus"></i></li>
+            <li>¿Es posible acceder a mi historial médico completo y agregar información nueva? <i class="fas fa-solid fa-plus"></i></li>
+            <li>¿Cómo garantiza la aplicación la privacidad y seguridad de mis datos médicos? <i class="fas fa-solid fa-plus"></i></li>
+            <li>¿La aplicación ofrece asistencia en tiempo real para problemas técnicos o preguntas?<i class="fas fa-solid fa-plus"></i></li>
+            <li>¿Cómo recibo notificaciones sobre resultados de pruebas o información médica importante? <i class="fas fa-solid fa-plus"></i></li>
+            <li>¿Qué medidas de accesibilidad tiene la aplicación? <i class="fas fa-solid fa-plus"></i></li>
+            <li>¿Cómo se manejan los pagos relacionados con las citas médicas en la aplicación?<i class="fas fa-solid fa-plus"></i></li>
+
+                
         </ul>
     </section>
 <!--inicio faq-->
