--- a/login.html
+++ b/login.html
@@ -43,8 +43,8 @@
                 </li>
                 
             </ul>
-            <button id="login" type="button">Login</button>
-            <a href="login.html" target="_blank"></a>
+            <button id="login" type="button">
+                <a href="/login.html" target="_blank">Login</a></button>
         </nav>
     </header>
     <!--Comienzo del main-->
@@ -60,9 +60,9 @@
             <label for="email"></label>
             <input type="password" placeholder="Ingresá tu contraseña" id="password" name="password" required>
             <label for="password"></label> 
-            <p class="p-login">¿Olvidaste tu contraseña? <a href="/login.html" >Hacé click acá</a></p> 
-            <p>¿Todavía no estás registrado? </p>         
-            <button class="submit" type="submit">Registrate</button>
+            <p class="olvidaste">¿Olvidaste tu contraseña? <a class="click" href="#" >Hacé click acá</a><br>
+            ¿Todavía no estás registrado? <a href="/registro.html" >Registrate</a> </p>         
+            <button class="submit" type="submit">Ingresá</button>
             
         </fieldset>
     </form>
