--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -45,7 +45,8 @@
                     <a href="Inicio.html" target="_blank">Contactanos</a>
                 </li>
             </ul>
-            <button id="login" type="button">Login</button>
+            <button id="login" type="button">
+                <a href="/login.html" target="_blank">Login</a></button>
         </nav>
     </header>
     <!--Comienzo del main-->
@@ -55,7 +56,7 @@
                 <img src="assets/img/imagenes quienes somos/Quienes-somos-01.png" alt="quienes somos foto">
             </figure>
             <article>
-                <h4>¿QUIENES SOMOS?</h4>
+                <h4 >¿QUIENES SOMOS?</h4>
                 <p class="somos">
 
                     En <b> Medilink</b>,creemos en la importancia de la atención médica personalizada y en brindar herramientas que permitan a las personas tomar el control de su bienestar. Nuestra misión es facilitar el acceso a la información médica, simplificar la gestión de la salud y fomentar una relación colaborativa entre pacientes y profesionales de la salud.
