--- a/registro.html
+++ b/registro.html
@@ -43,8 +43,8 @@
                 </li>
                 
             </ul>
-            <button id="login" type="button">Login</button>
-            <a href="login.html" target="_blank"></a>
+            <button id="login" type="button">
+                <a href="/login.html" target="_blank">Login</a></button>
         </nav>
     </header>
     <!--Comienzo del main-->
@@ -63,7 +63,7 @@
             <label for="email"></label>
             <input type="password" placeholder="Ingresá tu password" id="password" name="password" required>
             <label for="password"></label> 
-            <p>¿Ya estás registrado? <a href="/login.html" >Inicia Sesión</a></p>          
+            <p class="registrado">¿Ya estás registrado?<a href="/login.html" >Inicia Sesión</a></p>          
             <button class="submit" type="submit">Registrate</button>
             
         </fieldset>
