Cambios dashboard para presentación proyecto

--- a/gracias.html
+++ b/gracias.html
@@ -46,7 +46,7 @@
             </ul>
             <!-------BOTON LOGIN-------->
             <button id="login" type="button">
-                <a href="login.html" target="_blank">Login</a>
+                <a class="login_principal" href="login.html" target="_blank">Login</a>
             </button>
             <!------- FIN BOTON LOGIN-------->
         </nav>
@@ -83,16 +83,18 @@
                 <a href="https://www.facebook.com/messenger/?locale=es_LA" target="_blank">
                     <img src="/assets/img/imagenes index prestadores salud/messenger-transparencia-footer.png"
                         alt="messenger-footer">
+                    </a>
             </li>
             <li>
                 <a href="https://twitter.com/?lang=es" target="_blank">
                     <img src="/assets/img/imagenes index prestadores salud/twitter-transparencia-footer.png"
                         alt="twitter-footer">
+                    </a>
             </li>
             <li>
                 <a href="https://www.whatsapp.com/?lang=es_LA" target="_blank">
                     <img src="/assets/img/imagenes index prestadores salud/whatsapp-transparencia-footer.png"
-                        alt="whatsapp-footer">
+                        alt="whatsapp-footer"> </a>
             </li>
         </ul>
 
