--- a/noticias.html
+++ b/noticias.html
@@ -28,23 +28,27 @@
         <nav>
             <a href="/index.html"><img class="logo" src="/assets/img/imagenes index prestadores salud/logo-medilink.png"
                     alt="logo-medilink"></a>
+
             <ul class="pages">
                 <li>
-                    <a href="index.html" target="_blank">Inicio </a>
+                    <a href="#" target="_blank">Inicio </a>
                 </li>
                 <li>
-                    <a href="quienes_somos.html" target="_blank">Quienes somos </a>
+                    <a href="/quienes_somos.html" target="_blank">Quienes somos </a>
                 </li>
                 <li>
-                    <a href="servicios.html" target="_blank">Servicios </a>
+                    <a href="/servicios.html" target="_blank">Servicios </a>
                 </li>
                 <li>
-                    <a href="noticias.html" target="_blank">Noticias</a>
+                    <a href="/noticias.html" target="_blank">Noticias</a>
                 </li>
-
             </ul>
-            <button id="login" type="button">Login</button>
-            <a href="login.html" target="_blank"></a>
+
+            <!-------boton login-------->
+            <button id="login" type="button">
+                <a class="login_principal" href="login.html" target="_blank">Login</a>
+            </button>
+            <!------- FIN boton login-------->
         </nav>
     </header>
     <!--Comienzo del main-->
