--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -26,27 +26,29 @@
     <header>
         <!--barra navegación-->
         <nav>
-            <a><img class="logo" src="/assets/img/imagenes index prestadores salud/logo-medilink.png"
+            <a href="/index.html"><img class="logo" src="/assets/img/imagenes index prestadores salud/logo-medilink.png"
                     alt="logo-medilink"></a>
+
             <ul class="pages">
                 <li>
-                    <a href="index.html" target="_blank">Inicio </a>
+                    <a href="#" target="_blank">Inicio </a>
                 </li>
                 <li>
-                    <a href="quienes_somos.html" target="_blank">Quienes somos </a>
+                    <a href="/quienes_somos.html" target="_blank">Quienes somos </a>
                 </li>
                 <li>
-                    <a href="servicios.html" target="_blank">Servicios </a>
+                    <a href="/servicios.html" target="_blank">Servicios </a>
                 </li>
                 <li>
-                    <a href="noticias.html" target="_blank">Noticias</a>
-                </li>
-                <li>
-                    <a href="Inicio.html" target="_blank">Contactanos</a>
+                    <a href="/noticias.html" target="_blank">Noticias</a>
                 </li>
             </ul>
+
+            <!-------boton login-------->
             <button id="login" type="button">
-                <a href="/login.html" target="_blank">Login</a></button>
+                <a class="login_principal" href="login.html" target="_blank">Login</a>
+            </button>
+            <!------- FIN boton login-------->
         </nav>
     </header>
     <!--Comienzo del main-->
@@ -95,16 +97,19 @@
             <a href="https://www.facebook.com/messenger/?locale=es_LA" target="_blank">
                 <img src="/assets/img/imagenes index prestadores salud/messenger-transparencia-footer.png"
                     alt="messenger-footer">
+                </a>
         </li>
         <li>
             <a href="https://twitter.com/?lang=es" target="_blank">
                 <img src="/assets/img/imagenes index prestadores salud/twitter-transparencia-footer.png"
                     alt="twitter-footer">
+                </a>
         </li>
         <li>
             <a href="https://www.whatsapp.com/?lang=es_LA" target="_blank">
                 <img src="/assets/img/imagenes index prestadores salud/whatsapp-transparencia-footer.png"
                     alt="whatsapp-footer">
+                </a>
         </li>
     </ul>
 
