--- a/login.html
+++ b/login.html
@@ -29,20 +29,21 @@
             <a href="/index.html"><img class="logo" src="/assets/img/imagenes index prestadores salud/logo-medilink.png"
                     alt="logo-medilink"></a>
 
-            <ul class="pages">
-                <li>
-                    <a href="#" target="_blank">Inicio </a>
-                </li>
-                <li>
-                    <a href="/quienes_somos.html" target="_blank">Quienes somos </a>
-                </li>
-                <li>
-                    <a href="/servicios.html" target="_blank">Servicios </a>
-                </li>
-                <li>
-                    <a href="/noticias.html" target="_blank">Noticias</a>
-                </li>
-            </ul>
+                    <ul class="pages">
+                        <li>
+                            <a href="#" target="_parent">Inicio </a>
+                        </li>
+                        <li>
+                            <a href="/quienes_somos.html" target="_parent">Quienes somos </a>
+                        </li>
+                        <li>
+                            <a href="/servicios.html" target="_parent">Servicios </a>
+                        </li>
+                        <li>
+                            <a href="/noticias.html" target="_parent">Noticias</a>
+                        </li>
+                    </ul>
+        
 
             <!-------boton login-------->
             <button id="login" type="button">
